--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:15-alpine
     container_name: koprulu_db
     env_file:
-      - .env
+      - .env.postgres
     ports:
       - "5432:5432"
     volumes:
