--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres", "runtime-tokio", "macros" ] }
 tera = "1.20.0"
+serde = { version = "1.0.207", features = ["derive"] }
