--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -10,6 +10,9 @@ path = "src/lib.rs"
 
 [dependencies]
 service = { path = "../service" }
+common = { path = "../common" }
+entity = { path = "../entity" }
+migration = { path = "../migration" }
 tokio = { version = "1.34.0", features = ["full"] }
 axum = "0.7.5"
 tower = "0.5.0"
@@ -21,8 +24,7 @@ serde = "1.0.193"
 serde_json = "1.0.108"
 tera = "1.19.1"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-entity = { path = "../entity" }
-migration = { path = "../migration" }
+log = "0.4.22"
 
 [dependencies.sea-orm]
 version = "1.0.0-rc.5" # sea-orm version
