--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/lib.rs"
 
 [dependencies]
 entity = { path = "../entity" }
+common = { path = "../common" }
 
 [dependencies.sea-orm]
 version = "1.0.0-rc.5" # sea-orm version
