--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace]
-members = [".", "entity", "migration", "service", "api", "handler", "common"]
+members = [".", "entities", "migration", "db_services", "api", "templates", "common"]
 
 [dependencies]
 axum = "0.7.5"
@@ -22,7 +22,7 @@ env_logger = "0.11.5"
 hyper = "1.4.1"
 
 api = { path = "api" }
-entity = { path = "entity" }
-handlers = { path = "handler" }
-service = { path = "service" }
+entity = { path = "entities" }
+service = { path = "db_services" }
 common = { path = "common" }
+templates = { path = "templates" }
