--- a/templates/Cargo.toml
+++ b/templates/Cargo.toml
@@ -1,21 +1,20 @@
 [package]
-name = "handlers"
+name = "templates"
 version = "0.1.0"
 edition = "2021"
-publish = false
 
 [lib]
-name = "handlers"
+name = "templates"
 path = "src/lib.rs"
 
 [dependencies]
-service = { path = "../service" }
+service = { path = "../db_services" }
 tokio = { version = "1.34.0", features = ["full"] }
 axum = "0.7.5"
 serde = "1.0.193"
 serde_json = "1.0.108"
 tera = "1.20.0"
-entity = { path = "../entity" }
+entity = { path = "../entities" }
 migration = { path = "../migration" }
 common = { path = "../common" }
 
